objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ADL__c</fullName>
        <label>ADL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANXIETY__c</fullName>
        <label>ANXIETY</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>Set current date when user created for new contact or historical contact.</description>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_from_Campaign__c</fullName>
        <label>Address from Campaign</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_second_spoken_language__c</fullName>
        <description>Test-taker&apos;s age when start speaking second language</description>
        <label>Age at second spoken language</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol_Drug_Abuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alcohol/Drug Abuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Newsletters__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is made so that user can tell whether he wants to receive monthly news about Alzheimer’s, brain studies and the project!</description>
        <label>Allow Newsletters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Name__c</fullName>
        <label>App Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_Left_or_Right_hand_dominant__c</fullName>
        <description>Hand dominancy of test-taker.</description>
        <label>Are you Left or Right hand dominant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left-Handed</fullName>
                </value>
                <value>
                    <fullName>Right-Handed</fullName>
                </value>
                <value>
                    <fullName>I believe I use both hands equally well</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRAIN_DISEASE__c</fullName>
        <label>BRAIN DISEASE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bean_Game__c</fullName>
        <label>Bean Game</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brain_Disease_and_or_Memory_Problems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brain Disease and/or Memory Problems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CANCER__c</fullName>
        <label>CANCER</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COVID__c</fullName>
        <label>COVID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>It&apos;s coming from the source URL.</description>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Catchment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Catchment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_Signed_On__c</fullName>
        <label>Expanded Consent Signed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DBS_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBS Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DIET__c</fullName>
        <label>DIET</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <formula>DATETIMEVALUE(Now()) - DATETIMEVALUE(  Activation_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deary_Simple_And_Complex_Reaction_Time__c</fullName>
        <label>Deary Simple And Complex Reaction Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diabetes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digits__c</fullName>
        <label>Digits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dizzy_Spells__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dizzy Spells</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECog_12__c</fullName>
        <label>ECog 12</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Attainment__c</fullName>
        <formula>IF( OR(ISPICKVAL( Highest_level_of_education_completed__c , &apos;Up to 8 Years&apos;), ISPICKVAL( Highest_level_of_education_completed__c , &apos;Completed 8th Grade (Elementary or Primary School Graduate)&apos;), ISPICKVAL( Highest_level_of_education_completed__c , &apos;Some High School&apos;) ) , 1,
 IF(ISPICKVAL( Highest_level_of_education_completed__c , &apos;High School Diploma (Baccalaureate)&apos;), 2,  IF(ISPICKVAL( Highest_level_of_education_completed__c , &apos;Some College (Some University)&apos;), 3,  IF(ISPICKVAL( Highest_level_of_education_completed__c , &apos;College Degree (University Graduate)&apos;), 4,  IF(ISPICKVAL( Highest_level_of_education_completed__c , &apos;Post Graduate Degree (Masters or Doctorate)&apos;), 5, 0) ) ) ) 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Trigger_45_days__c</fullName>
        <description>This field is  used to fire the email reminder for setting up the password after 45 days</description>
        <formula>IF(ROUND(Days__c,0)==45, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email reminder after 45 days</inlineHelpText>
        <label>Email Trigger 45 days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Trigger_7_days__c</fullName>
        <description>This field is  used to fire the email reminder for setting up the password after 7 days</description>
        <formula>IF(ROUND(Days__c,0)==7, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email reminder after 7 days</inlineHelpText>
        <label>Email Trigger 7 days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_trigger_point__c</fullName>
        <description>This field is  used to fire the email reminder for setting up the password after 1 day</description>
        <formula>IF(ROUND(Days__c,0)==1, &apos;true&apos;, &apos;false&apos;)</formula>
        <inlineHelpText>Email reminder after 1 day</inlineHelpText>
        <label>Email trigger point</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_in_Paid_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled in Paid Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHAD__c</fullName>
        <label>FHAD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Face_Name_Associates__c</fullName>
        <label>Face-Name Associates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fake_News__c</fullName>
        <label>Fake News</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_degree_family_history_of_AD__c</fullName>
        <description>Is test-taker&apos;s brother or  sister diagnosed with alzheimer ever in past?</description>
        <label>First-degree family history of AD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don’t know</fullName>
                </value>
                <value>
                    <fullName>I prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_degree_family_history_of_EO_AD__c</fullName>
        <description>Is Sibling  or parent diagnosed with alzhemer before age of 55?</description>
        <label>First-degree family history of EO-AD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don’t know</fullName>
                </value>
                <value>
                    <fullName>I prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_spoken_language__c</fullName>
        <description>First spoken language of test-taker</description>
        <label>First spoken language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                    <label>Español</label>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Arabia</fullName>
                    <label>العربية</label>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                    <label>Български</label>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                    <label>bosanski</label>
                </value>
                <value>
                    <fullName>Catalan; Valencia</fullName>
                    <label>Català; valencià</label>
                </value>
                <value>
                    <fullName>Czech</fullName>
                    <label>Čeština</label>
                </value>
                <value>
                    <fullName>Welsh</fullName>
                    <label>Cymraeg</label>
                </value>
                <value>
                    <fullName>Dansk</fullName>
                </value>
                <value>
                    <fullName>Deutsch</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                    <label>Ελληνικά</label>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                    <label>Eesti</label>
                </value>
                <value>
                    <fullName>Basque</fullName>
                    <label>Euskara</label>
                </value>
                <value>
                    <fullName>Persian</fullName>
                    <label>فارسی</label>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                    <label>Suomi</label>
                </value>
                <value>
                    <fullName>French</fullName>
                    <label>Français</label>
                </value>
                <value>
                    <fullName>Irish</fullName>
                    <label>Gaeilge</label>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                    <label>ગુજરાતી</label>
                </value>
                <value>
                    <fullName>Abrit</fullName>
                    <label>עברית</label>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                    <label>हिंदी</label>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                    <label>Hrvatski</label>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                    <label>Magyar</label>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                    <label>Bahasa Indonesia</label>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                    <label>Íslenska</label>
                </value>
                <value>
                    <fullName>Italian</fullName>
                    <label>Italiano</label>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                    <label>日本語</label>
                </value>
                <value>
                    <fullName>Korean</fullName>
                    <label>한국어</label>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                    <label>Latviešu</label>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                    <label>Lietuvių</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_spoken_language_in_English__c</fullName>
        <formula>TEXT(First_spoken_language__c)</formula>
        <label>First spoken language in English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flanker__c</fullName>
        <label>Flanker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLUCOSAMINE__c</fullName>
        <label>GLUCOSAMINE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Test-taker gender.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Transgender Male</fullName>
                </value>
                <value>
                    <fullName>Transgender Female</fullName>
                </value>
                <value>
                    <fullName>Gender Variant/Non-Conforming</fullName>
                </value>
                <value>
                    <fullName>Not Listed</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
                <value>
                    <fullName>Not Listed (Free Text Field)</fullName>
                    <isActive>false</isActive>
                    <label>Not Listed (Free Text Field)</label>
                </value>
                <value>
                    <fullName>Not Listed(Free Text Field)</fullName>
                    <isActive>false</isActive>
                    <label>Not Listed(Free Text Field)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Card_already_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift Card already sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Glucosamine_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Glucosamine Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HEALTH_MEDICAL__c</fullName>
        <label>HEALTH MEDICAL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HEAT__c</fullName>
        <label>HEAT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Lifestyle_and_Medical__c</fullName>
        <label>Health, Lifestyle, and Medical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alzheimer’s Disease</fullName>
                </value>
                <value>
                    <fullName>Brain Disease</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Chronic Stress</fullName>
                </value>
                <value>
                    <fullName>Depression or Anxiety</fullName>
                </value>
                <value>
                    <fullName>Heart Disease</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure</fullName>
                </value>
                <value>
                    <fullName>Loss of Consciousness</fullName>
                    <label>Loss of Consciousness (more than 10 minutes)</label>
                </value>
                <value>
                    <fullName>Memory Problems</fullName>
                </value>
                <value>
                    <fullName>Parkinson’s Disease</fullName>
                </value>
                <value>
                    <fullName>Seizures</fullName>
                </value>
                <value>
                    <fullName>Sleep Problems</fullName>
                </value>
                <value>
                    <fullName>Smoker</fullName>
                </value>
                <value>
                    <fullName>Stroke</fullName>
                </value>
                <value>
                    <fullName>Type 1 Diabetes</fullName>
                </value>
                <value>
                    <fullName>Type 2 Diabetes</fullName>
                </value>
                <value>
                    <fullName>None of these Conditions Apply to Me</fullName>
                </value>
                <value>
                    <fullName>Alcohol/Drug Abuse</fullName>
                    <isActive>false</isActive>
                    <label>Alcohol/Drug Abuse</label>
                </value>
                <value>
                    <fullName>Brain Disease and/or Memory Problems</fullName>
                    <isActive>false</isActive>
                    <label>Brain Disease and/or Memory Problems</label>
                </value>
                <value>
                    <fullName>Depression or Anxiety,</fullName>
                    <isActive>false</isActive>
                    <label>Depression or Anxiety,</label>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                    <isActive>false</isActive>
                    <label>Diabetes</label>
                </value>
                <value>
                    <fullName>Dizzy Spells</fullName>
                    <isActive>false</isActive>
                    <label>Dizzy Spells</label>
                </value>
                <value>
                    <fullName>Smoking</fullName>
                    <isActive>false</isActive>
                    <label>Smoking</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_level_of_education_completed__c</fullName>
        <description>Highest academic qualification of test-taker</description>
        <label>Highest level of education completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up to 8 Years</fullName>
                </value>
                <value>
                    <fullName>Completed 8th Grade (Elementary or Primary School Graduate)</fullName>
                </value>
                <value>
                    <fullName>Some High School</fullName>
                </value>
                <value>
                    <fullName>High School Diploma (Baccalaureate)</fullName>
                </value>
                <value>
                    <fullName>Some College (Some University)</fullName>
                </value>
                <value>
                    <fullName>College Degree (University Graduate)</fullName>
                </value>
                <value>
                    <fullName>Post Graduate Degree (Masters or Doctorate)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hispanic_Latino__c</fullName>
        <description>Is test-taker from hispanic / latino?</description>
        <label>Hispanic/Latino</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hispanic_Latino_origin__c</fullName>
        <description>Would test-taker like to share your family&apos;s origin with us in case of hispanic / latino?</description>
        <label>Hispanic/Latino origin</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Equatorial Guinea</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Nicaragua</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Uruguay</fullName>
                </value>
                <value>
                    <fullName>Venezuela</fullName>
                </value>
                <value>
                    <fullName>Not Listed</fullName>
                </value>
                <value>
                    <fullName>Please indicate your Hispanic origin:</fullName>
                    <isActive>false</isActive>
                    <label>Please indicate your Hispanic origin:</label>
                </value>
                <value>
                    <fullName>The Canary Islands</fullName>
                    <isActive>false</isActive>
                    <label>The Canary Islands</label>
                </value>
                <value>
                    <fullName>or Not Listed</fullName>
                    <isActive>false</isActive>
                    <label>or Not Listed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>